<b>CARBONE V5.3.001 - 03 juillet 2015 - Pluton</b>

Passage à Bootstrap 3.3.4
Refonte du système de templating des formulaires en se basant sur Bootstrap (merci RomainG).
On utilise maintenant le système de grille sur 12 colonnes.
Permet d'améliorer également les aspects responsives.
Suppression des anciens constructeurs PHP4 dans class_dession.php, adodb_carbone/drivers/ et fpdf, pour la compatibilité PHP7. Il en reste probablement...
Mise à jour de la documentation.

<b>CARBONE V5.2.004 - 23 février 2015 - Columbia</b>

Mise en conformité HTML5 du charset dans les thèmes.
Ajout d'une balise de fermeture manquante, dans la lib_form.php, sur le traitement des champs 'upload' (merci RomainD).
Amélioration dans la gestion de l'affichage des requêtes SQL depuis la barre de debug (merci Mathieu).
Correction d'un bug de régression dans la lib_backoffice.php. Si pas d'item, STR_FORM_AFFICHAGE_PAR persistait (merci RomainD).
Correction d'un bug de régression dans la fonction navig_string() de la lib_backoffice.php. Si moins de n éléments retournés, la fonction navig_string() retournait tout de même 1.
Correction d'un bug sur la re-ecriture des urls présentes dans les CSS en cas d'activation de l'optimisation Frontend.
Durcissement des mots de passe et passage à SHA2 (SHA-512).
Mise en place d'un fichier Makefile.

<b>CARBONE V5.2.002 - 20 novembre 2014 - Philae</b>

Passage sous Bootstrap 3 (bigup RomainD).
Correction d'un bug de régression sur la récuppération du last insert id (bug lié à l'introduction de la fonctionnalité de profiling SQL).
Ajout d'un .htaccess à la racine du répertoire upload pour éviter le parsing de code PHP (bonne pratique).

<b>CARBONE V5.1.010 - 12 juin 2014 - Becca</b>

Déplacement de l'initialisation du level d'erreur dans include/config/config.php, en tirant partie de la distinction entre l'environnement de 'dev' et de 'prod' (merci Pierre).