@@ -1,3 +1,9 @@
+<b>CARBONE V5.3.002 - 14 mai 2016 - Mercure</b>
+
+Amélioration du support UTF8 (merci Carine et Sébastien).
+Ajout d'une fonctionnalité d'interception d'email (merci Stanislas).
+Amélioration du test sur le type MIME lors des upload (merci Carine).
+
 <b>CARBONE V5.3.001 - 03 juillet 2015 - Pluton</b>
 
 Passage à Bootstrap 3.3.4
